--- a/cmake/LLUConfig.cmake.in
+++ b/cmake/LLUConfig.cmake.in
@@ -5,6 +5,8 @@
 get_filename_component(LLU_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 include(CMakeFindDependencyMacro)
 
+list(APPEND CMAKE_MODULE_PATH ${LLU_CMAKE_DIR})
+
 find_dependency(WolframLibrary)
 find_dependency(MathLink)
 
