Use default Mathematica install location when empty MATHEMATICA_INSTALL_DIR is passed from command line.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ if(NOT MATHEMATICA_INSTALL_DIR)
 else()
 	set(_MATHEMATICA_INSTALL_DIR ${MATHEMATICA_INSTALL_DIR})
 endif()
-set(MATHEMATICA_INSTALL_DIR ${_MATHEMATICA_INSTALL_DIR} CACHE PATH "Mathematica installation")
+set(MATHEMATICA_INSTALL_DIR ${_MATHEMATICA_INSTALL_DIR} CACHE PATH "Mathematica installation" FORCE)
 
 # set default build type to Release
 if(NOT CMAKE_BUILD_TYPE)
