Hide symbols from the library.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,7 @@ if(NOT TARGET LLU)
 	    CXX_STANDARD 17
 	    CXX_STANDARD_REQUIRED YES
 	    CXX_EXTENSIONS NO
+		CXX_VISIBILITY_PRESET hidden
 	    POSITION_INDEPENDENT_CODE YES
 	)
 
