--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ if(NOT TARGET LLU)
 		${LLU_SOURCE_DIR}/LibraryLinkError.cpp
 		${LLU_SOURCE_DIR}/MArgumentManager.cpp
 		${LLU_SOURCE_DIR}/Containers/MArrayBase.cpp
-		${LLU_SOURCE_DIR}/Containers/RawArray.cpp
+		${LLU_SOURCE_DIR}/Containers/NumericArray.cpp
 		${LLU_SOURCE_DIR}/Containers/Tensor.cpp
 		${LLU_SOURCE_DIR}/ML/Get.cpp
 		${LLU_SOURCE_DIR}/ML/Put.cpp
