--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,11 @@
 CMakeSettings.json
 .idea/
 **/build-local.properties
-docs/
-!docs/LibraryLinkUtilities.doxyfile
 tests/Demo/bin
 Debug/
 lib/
 build*/
 install/
+
+docs/_build
+docs/html
