--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,23 +1,9 @@
 find_package(Sphinx REQUIRED)
 
 set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
-set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/docs/sphinx)
+set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/sphinx)
 
-add_custom_target(Sphinx ALL
-        COMMAND
-        ${SPHINX_EXECUTABLE} -b html
-        ${SPHINX_SOURCE} ${SPHINX_BUILD}
+add_custom_target(docs
+        COMMAND ${SPHINX_EXECUTABLE} -b html ${SPHINX_SOURCE} ${SPHINX_BUILD}
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT "Generating documentation with Sphinx")
-
-find_package(Sphinx REQUIRED)
-
-set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR})
-set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/docs/sphinx)
-
-add_custom_target(Sphinx ALL
-COMMAND
-${SPHINX_EXECUTABLE} -b html
-${SPHINX_SOURCE} ${SPHINX_BUILD}
-WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-COMMENT "Generating documentation with Sphinx")
