--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -30,6 +30,13 @@ set(TEST_MODULES
         "Tensor"
         )
 
+find_program(WOLFRAMSCRIPT_EXE
+        NAMES wolframscript
+        PATHS ${MATHEMATICA_INSTALL_DIR}
+        PATH_SUFFIXES Executables
+        DOC "Path to wolframscript executable."
+)
+
 foreach (UnitTest ${TEST_MODULES})
     set(MODULE_CODE "
 			Needs[\"MUnit`\"]\;
@@ -38,6 +45,6 @@ foreach (UnitTest ${TEST_MODULES})
 		")
     add_test(NAME ${UnitTest}
             WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/${UnitTest}"
-            COMMAND wolframscript -code ${MODULE_CODE} # we assume here that wolframscript is installed and on the PATH
+            COMMAND ${WOLFRAMSCRIPT_EXE} -code ${MODULE_CODE} # we assume here that wolframscript is installed and on the PATH
             )
 endforeach ()
