Start adding unit tests for thread pool, they need to be compiled with C++17.

--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -18,6 +18,7 @@ message(STATUS "Creating test targets.")
 # One helpful option for ctest is --verbose. It shows more output from wolframscript.
 
 set(TEST_MODULES
+        "Async"
         "DataList"
         "ErrorReporting"
         "Image"
