Implement utility functions for opening files with validation against the sandbox (or so we believe).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ if(NOT TARGET LLU)
         ${LLU_SOURCE_DIR}/ErrorLog/ErrorManager.cpp
 		${LLU_SOURCE_DIR}/ErrorLog/Errors.cpp
 		${LLU_SOURCE_DIR}/ErrorLog/Logger.cpp
-	)
+		${LLU_SOURCE_DIR}/FileUtilities.cpp)
 
 	#add the main library
 	add_library(LLU ${LLU_SOURCE_FILES})
