Include utilities unit tests in "make test".

--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -28,6 +28,7 @@ set(TEST_MODULES
         "Scalar"
         "String"
         "Tensor"
+        "Utilities"
         )
 
 set(CMAKE_FIND_APPBUNDLE NEVER)
