Switch from MathLink to WSTP in CMake scripts. Keep FindMathLink.cmake for LLU users that might still want to use MathLink.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,10 +51,10 @@ if(NOT TARGET LLU)
 	set(SYSTEMID ${DEFAULT_SYSTEMID} CACHE STRING "Wolfram System ID")
 
 	#=============================================
-	#=========== WOLFRAM MATHLINK ================
+	#================== WSTP =====================
 	#=============================================
 
-	find_package(MathLink 4.25 REQUIRED MODULE)
+	find_package(WSTP 4.25 REQUIRED MODULE)
 
 	#=============================================
 	#=============== LIBRARYLINK =================
@@ -145,7 +145,7 @@ if(NOT TARGET LLU)
 	#link libraries
 	target_link_libraries(LLU
 		PUBLIC
-			MathLink::MathLink
+			WSTP::WSTP
 			WolframLibrary::WolframLibrary
 	)
 
@@ -199,6 +199,7 @@ if(NOT TARGET LLU)
 	#Install the config, configversion and custom find modules
 	install(FILES
 		${CMAKE_CURRENT_LIST_DIR}/cmake/FindWolframLibrary.cmake
+		${CMAKE_CURRENT_LIST_DIR}/cmake/FindWSTP.cmake
 		${CMAKE_CURRENT_LIST_DIR}/cmake/FindMathLink.cmake
 		${CMAKE_CURRENT_LIST_DIR}/cmake/WolframUtilities.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/LLUConfig.cmake
@@ -216,6 +217,7 @@ if(NOT TARGET LLU)
 
 	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/WolframUtilities.cmake ${CMAKE_CURRENT_BINARY_DIR}/WolframUtilities.cmake COPYONLY)
 	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWolframLibrary.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWolframLibrary.cmake COPYONLY)
+	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWSTP.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWSTP.cmake COPYONLY)
 	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindMathLink.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindMathLink.cmake COPYONLY)
 
 	export(EXPORT LLU-targets
