Add comments to CMake code and introduce SPHINX_CUSTOM_THEME_INIT to better support custom themes.

--- a/docs/conf.py.in
+++ b/docs/conf.py.in
@@ -111,7 +111,7 @@ todo_include_todos = False
 
 # -- Options for HTML output ----------------------------------------------
 
-import sphinx_theme
+@SPHINX_CUSTOM_THEME_INIT@
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
