--- a/tests/UnitTests/CMakeLists.txt
+++ b/tests/UnitTests/CMakeLists.txt
@@ -22,6 +22,7 @@ set(TEST_MODULES
         "ErrorReporting"
         "Image"
         "ManagedExpressions"
+        "MArgumentManager"
         "MathLink"
         "NumericArray"
         "GenericContainers"
