--- a/cmake/LLUConfig.cmake.in
+++ b/cmake/LLUConfig.cmake.in
@@ -7,8 +7,9 @@ include(CMakeFindDependencyMacro)
 
 list(APPEND CMAKE_MODULE_PATH ${LLU_CMAKE_DIR})
 
-find_dependency(WolframLibrary)
-find_dependency(WSTP)
+find_package(Mathematica 12.0 REQUIRED WolframLibrary WSTP)
+#find_dependency(WolframLibrary 4)
+#find_dependency(WSTP 4.25)
 
 if(NOT TARGET LLU::LLU)
 	include("${LLU_CMAKE_DIR}/LLUTargets.cmake")
