--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@
 ###### Author: Rafal Chojna - rafalc@wolfram.com
 #################################################################################
 
-
-cmake_minimum_required(VERSION 3.11.0)
+cmake_minimum_required(VERSION 3.12.0)
 
 #set minimum MacOS target version if not defined as environment variable
 if(APPLE AND NOT DEFINED ENV{MACOSX_DEPLOYMENT_TARGET})
@@ -17,22 +16,9 @@ project(LLU VERSION 2.2.0 LANGUAGES CXX)
 
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
-include(WolframUtilities)
-
 #LLU is designed to be used as a static library but if you really want to try shared, swith to ON
 option(BUILD_SHARED_LIBS "Whether to build LLU as a shared library (default is static).")
 mark_as_advanced(BUILD_SHARED_LIBS)
-
-#Mathematica version
-set(MATHEMATICA_VERSION 12.1 CACHE STRING "Mathematica version")
-
-#Mathematica location
-if(NOT MATHEMATICA_INSTALL_DIR)
-	get_default_mathematica_dir(${MATHEMATICA_VERSION} _MATHEMATICA_INSTALL_DIR)
-else()
-	set(_MATHEMATICA_INSTALL_DIR ${MATHEMATICA_INSTALL_DIR})
-endif()
-set(MATHEMATICA_INSTALL_DIR ${_MATHEMATICA_INSTALL_DIR} CACHE PATH "Mathematica installation" FORCE)
 
 # set default build type to Release
 if(NOT CMAKE_BUILD_TYPE)
@@ -46,21 +32,11 @@ set(CMAKE_VERBOSE_MAKEFILE OFF CACHE BOOL "Verbose")
 #guard to prevent this file from running twice
 if(NOT TARGET LLU)
 
-	detect_system_id(DEFAULT_SYSTEMID)
-	message(STATUS "Detected SystemID: " "${DEFAULT_SYSTEMID}")
-	set(SYSTEMID ${DEFAULT_SYSTEMID} CACHE STRING "Wolfram System ID")
-
 	#=============================================
-	#================== WSTP =====================
+	#===== Mathematica (WSTP/LibraryLink) ========
 	#=============================================
 
-	find_package(WSTP 4.25 REQUIRED MODULE)
-
-	#=============================================
-	#=============== LIBRARYLINK =================
-	#=============================================
-
-	find_package(WolframLibrary 5 REQUIRED MODULE)
+	find_package(Mathematica 12.0 COMPONENTS WolframLibrary WSTP OPTIONAL_COMPONENTS wolframscript MODULE)
 
 	#=============================================
 	#=========== MAIN PACLET LIBRARY =============
@@ -200,7 +176,6 @@ if(NOT TARGET LLU)
 		${CMAKE_CURRENT_LIST_DIR}/cmake/FindMathematica.cmake
 		${CMAKE_CURRENT_LIST_DIR}/cmake/FindWolframLibrary.cmake
 		${CMAKE_CURRENT_LIST_DIR}/cmake/FindWSTP.cmake
-		${CMAKE_CURRENT_LIST_DIR}/cmake/WolframUtilities.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/LLUConfig.cmake
 		${CMAKE_CURRENT_BINARY_DIR}/LLUConfigVersion.cmake
 		DESTINATION ${INSTALL_CONFIGDIR}
@@ -214,9 +189,8 @@ if(NOT TARGET LLU)
 	##############################################
 	## Exporting from the build tree
 
-	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/WolframUtilities.cmake ${CMAKE_CURRENT_BINARY_DIR}/WolframUtilities.cmake COPYONLY)
-	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWolframLibrary.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWolframLibrary.cmake COPYONLY)
-	configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWSTP.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWSTP.cmake COPYONLY)
+	#configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWolframLibrary.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWolframLibrary.cmake COPYONLY)
+	#configure_file(${CMAKE_CURRENT_LIST_DIR}/cmake/FindWSTP.cmake ${CMAKE_CURRENT_BINARY_DIR}/FindWSTP.cmake COPYONLY)
 
 	export(EXPORT LLU-targets
 		FILE ${CMAKE_CURRENT_BINARY_DIR}/LLUTargets.cmake
