Generic containers: add missing doxygen comments and move longer function definitions out of class bodies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,8 @@ if(NOT TARGET LLU)
 		${LLU_SOURCE_DIR}/ErrorLog/Logger.cpp
 		${LLU_SOURCE_DIR}/FileUtilities.cpp
 		${LLU_SOURCE_DIR}/TypedMArgument.cpp
-		${LLU_SOURCE_DIR}/Containers/DataStore.cpp)
+		${LLU_SOURCE_DIR}/Containers/DataStore.cpp
+		${LLU_SOURCE_DIR}/Containers/NumericArray.cpp)
 
 	#add the main library
 	add_library(LLU ${LLU_SOURCE_FILES})
