--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ if(NOT TARGET LLU)
 
 	#compilation options
 	set_target_properties(LLU PROPERTIES
-	    CXX_STANDARD 14
+	    CXX_STANDARD 17
 	    CXX_STANDARD_REQUIRED YES
 	    CXX_EXTENSIONS NO
 		CXX_VISIBILITY_PRESET hidden
@@ -130,7 +130,7 @@ if(NOT TARGET LLU)
 
 	# tell all targets importing LLU that public part of LLU uses C++17 features
 	target_compile_features(LLU
-		PUBLIC
+		INTERFACE
 			cxx_std_17
 	)
 
